updated the queue to thread